Fixed Flex display bug on incompatible mobile browsers

--- a/sass/menu/_CollapseOnMobile.scss
+++ b/sass/menu/_CollapseOnMobile.scss
@@ -1,46 +1,24 @@
-//helper class
-.vl-flex-column-stretch{display: flex; flex-direction: column; align-items: stretch;}
-
 .vl-navbar-toggler{
 	cursor: pointer;
 	font-size: 1.5rem;
 	width: 3.5rem;
 	text-align: center;
-	span:first-child{
-		display: none;
-	}
-	span:last-child{
-		display: inline;
-	}		
+	span:first-child{display: none;}
+	span:last-child{display: inline;}		
 	&.vl-toggler-closed{
-		span:first-child{
-			display: inline;
-		}
-		span:last-child{
-			display: none;
-		}
-	}
-}
-.vl-collapse-on-mobile-menu{
-	flex-basis:100%;
-	@extend .vl-flex-column-stretch;
-    overflow-y: auto;
-    max-height: calc(100vh - 50px);
-	.vl-nav-left{
-		justify-content: flex-start;
-		@extend .vl-flex-column-stretch;
-	}
-	.vl-nav-right{
-		justify-content: flex-end;
-		@extend .vl-flex-column-stretch;
-	}
-	&.vl-menu-closed{
-		display: none;
+		span:first-child{display: inline;}
+		span:last-child{display: none;}
 	}
 }
 @include media-breakpoint-down(md) {
 	.vl-collapse-on-mobile-menu{
+		width: 100%;
+	    overflow-y: auto;
+	    max-height: calc(100vh - 50px);
 		padding-bottom: 50px; //for iOS Safari's bottom toolbar and give room to breathe
+		&.vl-menu-closed{
+			display: none;
+		}
 	}
 }
 @include media-breakpoint-up(lg) {
@@ -48,6 +26,7 @@
 		display: none;
 	}
 	.vl-collapse-on-mobile-menu{
+		display: flex; 
 		flex-basis:auto;
 		flex-grow: 1;
 		justify-content: space-between;
@@ -57,10 +36,14 @@
 			display: flex; //&.vl-menu-closed to override mobile default
 		}
 		.vl-nav-left{
+			display: flex;
+			align-items: stretch;
 			justify-content: flex-start;
 			flex-direction: row;
 		}
 		.vl-nav-right{
+			display: flex;
+			align-items: stretch;
 			justify-content: flex-end;
 			flex-direction: row;
 		}
