adding new field type ListeSelect

--- a/sass/element/icons.scss
+++ b/sass/element/icons.scss
@@ -72,7 +72,7 @@
 .icon-instagram:before { content: '\f16d'; } /* '' */
 
 /* Fixing some not well centered vertically icons */
-.icon-search, .icon-plus{
+.icon-plus{
 	margin-top: 1px;
 }
 
