--- a/sass/menu/classic/_Navbar.scss
+++ b/sass/menu/classic/_Navbar.scss
@@ -1,8 +1,8 @@
-.vl-nav{
+/*.vl-nav{
 	>.vl-nav-item{
 		border-top: $nav-item-border;
 		&:hover,&.active{
 			border-top: $nav-item-border-hover;
 		}
 	}
-}
+}*/
