sliding panel and making flex, rows clickable and had to stop bubbling click in link because of that

--- a/sass/element/_ButtonLink.scss
+++ b/sass/element/_ButtonLink.scss
@@ -50,7 +50,12 @@
  * Display styles
  */
 .vlBtn, .vlLink{
-	label{cursor: pointer;}
+	label{
+		cursor: pointer;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+	}
 	@if variable-exists(btn-border-radius){
 		border-radius: $btn-border-radius;
 	}
