--- a/sass/element/_Modal.scss
+++ b/sass/element/_Modal.scss
@@ -14,14 +14,12 @@
 }
 .vlModalClose{
     position:fixed;
-    top:10px;
-    right:10px;
+    top: 0.5rem;
+    right: 0.75rem;
     text-shadow: 0 5px 8px black;
     color: white;
     cursor: pointer;
-    .icon-times-circle{
-        font-size: 3rem;
-    }
+    font-size: 3rem;
 }
 .vlModalBtn{
     position: fixed;
