--- a/sass/element/elements.scss
+++ b/sass/element/elements.scss
@@ -19,6 +19,7 @@ $btn-border-radius: 0.25rem !default;
 @import 'ButtonLink';
 @import 'Tabs';
 @import 'Modal';
+@import 'SlidingPanel';
 @import 'Alert';
 @import 'Badge';
 @import 'Gallery';
