--- a/sass/menu/classic/_Dropdown.scss
+++ b/sass/menu/classic/_Dropdown.scss
@@ -2,7 +2,7 @@
 	.vl-dropdown{
 		.vl-dropdown-menu {
 			top: 97%;
-			padding-bottom: 0.7rem;
+			//padding-bottom: 0.7rem;
 			box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 			border-radius: 0.25rem;
 			border: 1px solid gainsboro;
