design fixes and making tag color a variable

--- a/sass/bootstrap-variables.scss
+++ b/sass/bootstrap-variables.scss
@@ -5,6 +5,7 @@ $form-primary-color: $primary !default;
 $form-field-error-color: #f56565 !default;
 $form-control-bg: #fff !default;
 $form-control-placeholder-color: gainsboro !default;
+$tags-bg-color: $form-primary-color !default;
 
 /**
  * Icons
