--- a/sass/menu/_Dropdown.scss
+++ b/sass/menu/_Dropdown.scss
@@ -2,51 +2,36 @@
 	position: relative;
 	cursor: pointer;
 	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+	flex-direction: row;
+	align-items: center;
 	.icon-down{
 		font-size: 70%;
 		color: gainsboro;
 	}
 	.vl-nav-item{
-		align-items: flex-start;
-	}
-}
-.vl-dropdown-menu{
-    &.vl-menu-closed{
-        display: none;
-    }
-}
-@include media-breakpoint-up(lg) {
-
-	.vl-dropdown{
-		flex-direction: row;
 		align-items: center;
-		.vl-nav-item{
-			align-items: center;
-		}
-		&:hover .vl-dropdown-menu{
-			transform: scale(1);
-			opacity: 1;
-		}
 	}
-	.vl-dropdown-menu {
-		position: absolute;
-		left: 0;
-		top: 100%;
-		background-color: white;
-		z-index: 100;
-		transform: scale(0);
-		transition: all .2s ease-in-out;
-		opacity: 0;
-		transform-origin: top left;
-        &.vl-menu-closed{
-            display: block; //cancel mobile effect
-        }
-		&.vl-dropdown-menu-right{
-			left: auto;
-			right: 0;
-			transform-origin: top right;
-		}
+	&:hover .vl-dropdown-menu{
+		transform: scale(1);
+		opacity: 1;
+	}
+}
+.vl-dropdown-menu {
+	position: absolute;
+	left: 0;
+	top: 100%;
+	background-color: white;
+	z-index: 105; //higher than sidebar
+	transform: scale(0);
+	transition: all .2s ease-in-out;
+	opacity: 0;
+	transform-origin: top left;
+    &.vl-menu-closed{
+        display: block; //cancel mobile effect
+    }
+	&.vl-dropdown-menu-right{
+		left: auto;
+		right: 0;
+		transform-origin: top right;
 	}
 }
