--- a/sass/form/common/_TaggableInput.scss
+++ b/sass/form/common/_TaggableInput.scss
@@ -34,8 +34,7 @@
 		align-items: flex-end;
 		>div{
 			margin: 0.1rem;
-			@include tag($tags-bg-color);
-			@include ellipsis1();
+			@include tagFilled($tags-bg-color);
 		    padding: 0.1rem 0.5rem 0.1rem 0.2rem; //has to be after @include tag()
 			&.vlCustomLabel{ // to align x with customLabel, don't remove
 				display: flex;
