--- a/sass/menu/_Sidebar.scss
+++ b/sass/menu/_Sidebar.scss
@@ -1,21 +1,30 @@
-.vl-sidebar-l, .vl-sidebar-r{
-	display: none;
-}
 .vl-sidebar-l{
     direction: rtl;
     *{
         direction: ltr;
     }
 }
-@include media-breakpoint-up(lg) {
+.vl-sidebar-l, .vl-sidebar-r{
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
+    .vl-nav-item{
+        align-items: center;
+        white-space: initial;
+    }
+}
+
+@include media-breakpoint-down(md) {
     .vl-sidebar-l, .vl-sidebar-r{
-        display: flex;
-        flex-direction: column;
-        overflow-x: hidden;
-        overflow-y: auto;
-        .vl-nav-item{
-            align-items: center;
-            white-space: initial;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        transition: all 0.4s ease-in-out;
+        transform: translateX(-100%);
+        z-index: 100;
+        &.vlOpen{
+            transform: translateX(0);
         }
     }
 }
