added calendarmonth and other improvements

--- a/sass/element/_Mixins.scss
+++ b/sass/element/_Mixins.scss
@@ -19,6 +19,8 @@
 }
 
 @mixin tag(){
+	display: inline-flex;
+	margin: 0.1rem;
 	border-radius: 0.2rem;
     padding: 0.15rem 0.2rem;
 	@include ellipsis1();
