--- a/sass/element/_Modal.scss
+++ b/sass/element/_Modal.scss
@@ -44,10 +44,10 @@
     display: inline-block;
     max-height: 98vh;
     max-width: 98vw;
-    overflow-y: auto;
+    /*overflow-y: auto;
     overflow-x: hidden;
+    @extend .mini-scroll !optional;*/
     border-radius: 0.5rem;
-    @extend .mini-scroll !optional;
     background-color: #fff;
     box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
     transition: all .3s ease;
