A lot of improvements

--- a/sass/element/_Gallery.scss
+++ b/sass/element/_Gallery.scss
@@ -33,7 +33,7 @@
 			top: 0.2rem;
 			right: 0.2rem;
 			text-align: center;
-		    text-shadow: 0 5px 8px black;
+		    text-shadow: 0 0 3px black;
 		    color: white;
 			i{
 				font-size: 80%;
