--- a/sass/form/common/_File.scss
+++ b/sass/form/common/_File.scss
@@ -1,7 +1,8 @@
 .vlFile{
 	.vlTaggableInput{
-	    .vlFormControl{
+	    input{
 	    	opacity: 0;
+	    	position: absolute;
 		    cursor: pointer;
 		    z-index: 1;
 			line-height: 1.15; //not working on Firefox
