--- a/sass/form/common/_TaggableInput.scss
+++ b/sass/form/common/_TaggableInput.scss
@@ -62,6 +62,6 @@
 }
 .vlFocusedField.vlDirtyField .vlTaggableInput{
 	.vlTags{
-		padding-bottom: 0;
+		//padding-bottom: 0; //to delete.. why?
 	}
 }
