--- a/sass/element/_SlidingPanel.scss
+++ b/sass/element/_SlidingPanel.scss
@@ -3,15 +3,17 @@
     position: fixed;
     overflow: hidden;
     z-index: 120; //higher than vlSidebarToggler and form-controls
+    background-color: rgba(0, 0, 0, .75);
 }
 .vlPanelClose{
     position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    font-size: 2.25rem;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
     color: white;
-    .icon-times-circle{
-        text-shadow: 0 5px 8px black;
+    .icon-times{
+        color: gainsboro;
+        text-shadow: 0 5px 8px white;
     }
 }
 .vlSlidingPanel{
@@ -21,5 +23,5 @@
     right: 0;
     max-width: 100vw;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-    overflow-y: scroll;
+    overflow-y: auto;
 }
