Various improvements: Multiform, Columns, Collapse

--- a/sass/form/common/_File.scss
+++ b/sass/form/common/_File.scss
@@ -6,6 +6,7 @@
 		    cursor: pointer;
 		    z-index: 1;
 			line-height: 1.15; //not working on Firefox
+			width: 100%; //otherwise it was overflowing
 		}
 	}
 }
