Adding 0 as a request value and minor fixes

--- a/sass/form/common.scss
+++ b/sass/form/common.scss
@@ -8,6 +8,7 @@
 @import 'common/TaggableInput';
 
 @import 'common/Checkbox';
+@import 'common/Counter';
 @import 'common/CKEditor';
 @import 'common/Date';
 @import 'common/File';
