Interactions & Style improvements

--- a/sass/menu/classic/_Sidebar.scss
+++ b/sass/menu/classic/_Sidebar.scss
@@ -14,4 +14,8 @@
 		}
 	}
 }
-
+@include media-breakpoint-down(md) {
+	.vl-sidebar-l, .vl-sidebar-r{
+		padding-bottom: 1rem; //because of the bottom toolbar of mobile browsers
+	}
+}
