--- a/sass/element/_SlidingPanel.scss
+++ b/sass/element/_SlidingPanel.scss
@@ -27,4 +27,6 @@
     max-width: 100vw;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     overflow-y: auto;
+    height: 100vh;
+    background-color: white;
 }
