--- a/sass/query/_Pagination.scss
+++ b/sass/query/_Pagination.scss
@@ -4,7 +4,6 @@
     
 	display: flex;
     flex-wrap: wrap;
-    border-radius: .25rem;
 }
 .page-item.active .page-link {
     z-index: 1;
@@ -12,13 +11,22 @@
     background-color: $primary;
     border-color: $primary;
 }
-.page-link {
-    position: relative;
-    display: block;
-    padding: .5rem .75rem;
-    margin-left: -1px;
-    line-height: 1.25;
-    color: $primary;
-    background-color: #fff;
+.page-item{
     border: 1px solid #dee2e6;
+    border-left: 0;
+    background-color: #fff;
+    &:first-child{
+        border-left: 1px solid #dee2e6;
+        border-top-left-radius: .25rem;
+        border-bottom-left-radius: .25rem;
+    }
+    &:last-child{
+        border-top-right-radius: .25rem;
+        border-bottom-right-radius: .25rem;
+    }
+}
+.page-link {
+    display: block;
+    padding: .25rem .5rem;
+    color: $primary;
 }
