Reviewed link and button slot and label with icons display

--- a/sass/element/_Shortcuts.scss
+++ b/sass/element/_Shortcuts.scss
@@ -1,3 +1,15 @@
+/* Adding tailwind shortcuts in case user does not want to use it */
+.flex{
+	display: flex;
+}
+
+.flex-col-reverse{
+	flex-direction: column-reverse;
+}
+
+
+
+/* OLD APPROACH TO MERGE WITH TAILWIND CLASSES */
 .vlAbsoluteInset{
 	position: absolute;
 	top: 0;
