--- a/sass/element/elements.scss
+++ b/sass/element/elements.scss
@@ -1,4 +1,5 @@
 @import 'icons';
+@import 'icons-svg';
 
 $primary: #31475e !default;
 $secondary: #359678 !default;
@@ -6,6 +7,10 @@ $box-shadow-focused: 0 0 0.1rem 0.25rem mix($primary, #fff, 35) !default;
 $btn-padding-y: 0.4rem !default;
 $btn-padding-x: 1rem !default;
 $btn-border-radius: 0.25rem !default;
+
+$icon-spacing: 0.25em !default;
+
+[v-cloak] { display: none; }
 
 @import 'Normalize';
 @import 'BootstrapGridTable';
