--- a/sass/menu/_NavItem.scss
+++ b/sass/menu/_NavItem.scss
@@ -1,6 +1,7 @@
 .vl-nav-item{
 	display: flex;
+	align-items: center;
 	white-space: nowrap;
 	flex-direction: row;
-	align-items: center;
+	transition: all 0.2s ease-in-out;
 }
