--- a/sass/element/_ButtonLink.scss
+++ b/sass/element/_ButtonLink.scss
@@ -51,15 +51,16 @@
  * Display styles
  */
 .vlBtn, .vlLink{
-	label{
-		cursor: pointer;
-		display: inline-flex;
-		align-items: center;
-		justify-content: center;
-	}
+	cursor: pointer;
+	display: inline-flex;
+	align-items: center;
+
 	@if variable-exists(btn-border-radius){
 		border-radius: $btn-border-radius;
 	}
+}
+.vlBtn{
+	justify-content: center; //Only buttons are centered	
 }
 button.vlBtn, a.vlBtn, a.vlLink{ //i had to go 2 levels deep because of normalize adding outline
 	@if variable-exists(box-shadow-focused){
@@ -71,14 +72,6 @@ button.vlBtn, a.vlBtn, a.vlLink{ //i had to go 2 levels deep because of normaliz
 }
 .vlBtn{ 
 	padding: $btn-padding-y $btn-padding-x;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-}
-.vlLink{ 
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
 }
 .vlBtnBlock{
 	display: flex;
