--- a/sass/menu/_Collapse.scss
+++ b/sass/menu/_Collapse.scss
@@ -4,13 +4,11 @@
     .vlCollapseToggler{
         display: flex;
         justify-content: space-between;
-        
+        align-items: center;        
         width: 100%;
         cursor: pointer;
-        >a{
+        >a{            
             display: flex;
-            white-space: nowrap;
-            flex-direction: row;
             align-items: center;
         }
 
