Popup display, Dropdown/Collapse improvements, added new div component, Select bug fixes

--- a/sass/element/_Shortcuts.scss
+++ b/sass/element/_Shortcuts.scss
@@ -3,8 +3,16 @@
 	display: flex;
 }
 
+.flex-col{
+	flex-direction: column;
+}
+
 .flex-col-reverse{
 	flex-direction: column-reverse;
+}
+
+.justify-between{
+	justify-content: space-between;
 }
 
 
