--- a/sass/element/elements.scss
+++ b/sass/element/elements.scss
@@ -28,6 +28,7 @@ $icon-spacing: 0.25em !default;
 @import 'Tabs';
 @import 'Modal';
 @import 'SlidingPanel';
+@import 'Popup';
 @import 'Alert';
 @import 'Badge';
 @import 'Gallery';
