Adding configurations to SidebarToggler and a sass breakpoint variable for configuration xs,sm,md,etc...

--- a/sass/menu/_Collapse.scss
+++ b/sass/menu/_Collapse.scss
@@ -12,15 +12,6 @@
             display: flex;
             align-items: center;
         }
-
-        &.vlTogglerClosed .icon-down-dir{
-            display: block;
-            transform: rotate(90deg);
-            z-index: 0; // for somee reason, transform rotate adds z-index...
-            &:before{
-                margin-left: 4px; //re-centering the rotated icon
-            }
-        }
     }
     .vlCollapseMenu{
         display: flex;
@@ -29,5 +20,14 @@
         &.vlMenuClosed{
             display: none;
         }
+    }
+}
+
+.vlTogglerClosed .icon-down-dir{
+    display: block;
+    transform: rotate(90deg);
+    z-index: 0; // for somee reason, transform rotate adds z-index...
+    &:before{
+        margin-left: 4px; //re-centering the rotated icon
     }
 }
