--- a/sass/menu/_Sidebar.scss
+++ b/sass/menu/_Sidebar.scss
@@ -15,7 +15,7 @@
     }
 }
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down($sidebar-breakpoint) {
     .vl-sidebar-l, .vl-sidebar-r{
         position: absolute;
         top: 0;
