--- a/sass/element/_Shortcuts.scss
+++ b/sass/element/_Shortcuts.scss
@@ -15,6 +15,10 @@
 	justify-content: space-between;
 }
 
+.flex-shrink-0{
+	flex-shrink: 0;
+}
+
 
 
 /* OLD APPROACH TO MERGE WITH TAILWIND CLASSES */
