Added clearable configuration for input

--- a/sass/form/common.scss
+++ b/sass/form/common.scss
@@ -13,6 +13,7 @@
 @import 'common/Date';
 @import 'common/File';
 @import 'common/Place';
+@import 'common/Input';
 @import 'common/Image';
 @import 'common/Json';
 @import 'common/Select';
