No need for taggableinput to calculate width anymore, added Echo listeners clean-up, and new LIVE KOMPOSERS concept better than checking if visible

--- a/sass/form/common/_File.scss
+++ b/sass/form/common/_File.scss
@@ -1,12 +1,15 @@
 .vlFile{
-	.vlTaggableInput{
-	    input{
-	    	opacity: 0;
-	    	position: absolute;
-		    cursor: pointer;
-		    z-index: 1;
-			line-height: 1.15; //not working on Firefox
-			width: 100%; //otherwise it was overflowing
+    input{
+    	opacity: 0;
+    	position: absolute;
+	    cursor: pointer;
+	    z-index: 1;
+		line-height: 1.15; //not working on Firefox
+		width: 100%; //otherwise it was overflowing
+	}
+	.vlCustomLabel{
+		.icon-times{
+			z-index: 2; //above the input
 		}
 	}
 }
